[package]
name = "without-a-bundler"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.41" #for opengl
wasm-bindgen = "0.2.64"
console_error_panic_hook = "0.1.6"
wasm-bindgen-futures = "*"
shclient_gen={path="../shclient_gen"}
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"


[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
  "WebGlUniformLocation",

]
#features = [
#  'Document',
#  'Element',
#  'HtmlElement',
#  'Node',
#  'Window',
#  'WebSocket'
#]

[profile.release]
lto = true


[patch.crates-io]
axgeom={path="../axgeom"}

[patch.'https://github.com/tiby312/duckduckgeo']
duckduckgeo={path="../duckduckgeo"}

